<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.tvdi.fitness.ui.user.UserViewModel.Gender" />

        <variable
            name="userViewModel"
            type="com.tvdi.fitness.ui.user.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/preferred_name_input_layout"
            style="@style/Widget.tvdi.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/preferred_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/preferred_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={userViewModel.preferredName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/family_name_input"
            style="@style/Widget.tvdi.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/family_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/preferred_name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={userViewModel.familyName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/given_name_input"
            style="@style/Widget.tvdi.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/family_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/family_name_input">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={userViewModel.givenName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/gender_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/given_name_input">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{userViewModel.getGender(Gender.MALE)}"
                android:inputType="textCapSentences"
                android:onClick="@{() -> userViewModel.setGender(Gender.MALE)}"
                android:padding="16dp"
                android:text="@string/radio_male" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{userViewModel.getGender(Gender.FEMALE)}"
                android:inputType="textCapSentences"
                android:onClick="@{() -> userViewModel.setGender(Gender.FEMALE)}"
                android:padding="16dp"
                android:text="@string/radio_female" />

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/birthdate_input_layout"
            style="@style/Widget.tvdi.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthdate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_group">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthdate_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:text="@={userViewModel.birthdate}" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>