<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="userViewModel"
            type="com.tvdi.fitness.ui.user.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/walking_distance_layout"
            style="@style/Widget.tvdi.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/walking_distance"
            android:padding="@dimen/basic_padding"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toStartOf="@id/goal_distance_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/walking_distance_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:text="@{String.valueOf(userViewModel.distance)}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/goal_distance_input_layout"
            style="@style/Widget.tvdi.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/goal_distance"
            android:padding="@dimen/basic_padding"
            app:expandedHintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/map"
            app:layout_constraintEnd_toStartOf="@id/walking_steps_layout"
            app:layout_constraintStart_toEndOf="@id/walking_distance_layout"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/goal_distance_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/walking_steps_layout"
            style="@style/Widget.tvdi.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/step_count"
            android:padding="@dimen/basic_padding"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/goal_distance_input_layout"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/walking_steps_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="false"
                android:maxLines="1"
                android:text="@{String.valueOf(userViewModel.stepCount)}" />
        </com.google.android.material.textfield.TextInputLayout>


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/walking_steps_layout"
            tools:context=".ui.map.MapsFragment" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:backgroundTint="@color/red_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:srcCompat="@drawable/ic_baseline_not_started_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>